pulled in eviction and labelled as 1.0.0.RELEASE.evict

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ jredisVersion=03122010
 jedisVersion=2.1.0
 springVersion=3.1.1.RELEASE
 log4jVersion=1.2.16
-version=1.0.1.RELEASE
+version=1.0.1.RELEASE.evict
 srpVersion=0.2
 jacksonVersion=1.8.6
 mockitoVersion=1.8.5
